# aether

./: .gitignore  README.md  pyproject.toml  requirements.txt
pc1/LAPTOP-7HJCMU6K/pc2/: file2.json
pc2/: file1.json  file3.json
src/aether/: __init__.py  core.py  core_back.py
