[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aether-sdk"
version = "0.1.0"
description = "Serverless LAN Shared Memory for Python"
readme = "README.md"
requires-python = ">=3.14.2"
license = {file = "LICENSE"}
authors = [
  {name = "Rodrigo Castilla Pousa", email = "rodrigocastillap@gmail.com"},
]
dependencies = [
  "cryptography>=41.0.0",  # Para el cifrado Fernet
  "tinydb>=4.8.0",
  "ipython>=9.10.0"
]

[project.urls]
"Homepage" = "https://github.com/rodrigo-castilla/aether"
"Bug Tracker" = "https://github.com/rodrigo-castilla/aether/issues"