[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aether-sdk"
version = "0.1.0"
description = "Serverless LAN Shared Memory SDK"
readme = "README.md"
requires-python = ">=3.14.2"
license = {text = "MIT"}
authors = [
  {name = "Rodrigo Castilla Pousa", email = "rodrigocastillap@gmail.com"},
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/rodrigo-castilla/aether"
"Bug Tracker" = "https://github.com/rodrigo-castilla/aether/issues"